--- a/index.html
+++ b/index.html
@@ -5,28 +5,151 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	  <link rel="stylesheet" href="css/materialize.min.css">
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="js/materialize.min.js"></script>
+
   </head>
   <body class="container">
       <div class="card-panel center teal">
         <h3 style="color:white">SoPrompt Services Inc.</h3>
       </div>
+
+      <!-- VIEW -->
       <div class="card-panel teal">
         <h5 style="color:white">View</h5>
-        <button class="btn-large grey"><i class="material-icons left">visibility</i>Machine Status</button>
-        <button class="btn-large grey"><i class="material-icons left">visibility</i>Bill</button>
-        <button class="btn-large grey"><i class="material-icons left">visibility</i>Repair Jobs</button>
-        <button class="btn-large grey"><i class="material-icons left">visibility</i>Generated Revenue</button>
+        <button id="vMachStat" class="btn-large waves-effect waves-dark grey"><i class="material-icons left">visibility</i>Machine Status</button>
+        <button id="vBill" class="btn-large waves-effect waves-dark grey"><i class="material-icons left">visibility</i>Bill</button>
+        <button id="vRepJob" class="btn-large waves-effect waves-dark grey"><i class="material-icons left">visibility</i>Repair Jobs</button>
+        <button id="vGenRev" class="btn-large waves-effect waves-dark grey"><i class="material-icons left">visibility</i>Generated Revenue</button>
       </div>
+
+      <div id="vMachStatForm" class="card-panel white" hidden>
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="vmachineId" type="text" class="active validate">
+              <label for="vmachineId">Machine ID</label>
+            </div>
+            <div class="input-field col s4">
+              <input id="vPhoneNumber1" type="text" class="active validate">
+              <label for="vPhoneNumber1">Phone Number</label>
+            </div>
+            <div class="input-field col s3 offset-s1">
+              <button class="btn waves-effect waves-light red" type="submit" name="action1">View<i class="material-icons right">send</i></button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div id="vBillForm" class="card-panel white" hidden>
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="vPhoneNumber2" type="text" class="active validate">
+              <label for="vPhoneNumber2">Phone Number</label>
+            </div>
+            <div class="input-field col s3 offset-s5">
+              <button class="btn waves-effect waves-light red" type="submit" name="action2">View<i class="material-icons right">send</i></button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <!-- CREATE -->
       <div class="card-panel teal">
         <h5 style="color:white">Create</h5>
-        <button class="btn-large grey"><i class="material-icons left">add</i>New Service Contract</button>
-        <button class="btn-large grey"><i class="material-icons left">add</i>New Repair Job</button>
+        <button id="cServCon" class="btn-large waves-effect waves-dark grey"><i class="material-icons left">add</i>New Service Contract</button>
+        <button id="cRepJob" class="btn-large waves-effect waves-dark grey"><i class="material-icons left">add</i>New Repair Job</button>
       </div>
+
+      <div id="cServConForm" class="card-panel white" hidden>
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="cMachId1" type="text" class="active validate">
+              <label for="cMachId1">Machine ID</label>
+            </div>
+            <div class="input-field col s4">
+              <input id="cPhoneNumber" type="text" class="active validate">
+              <label for="cPhoneNumber">Phone Number</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="cStartDate" type="text" class="active validate">
+              <label for="cStartDate">Start Date</label>
+            </div>
+            <div class="input-field col s4">
+              <input id="cEndDate" type="text" class="active validate">
+              <label for="cEndDate">End Date</label>
+            </div>
+            <div class="input-field col s3 offset-s1">
+              <button class="btn waves-effect waves-light red" type="submit" name="action2">Create<i class="material-icons right">send</i></button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div id="cRepJobForm" class="card-panel white" hidden>
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="cMachId2" type="text" class="active validate">
+              <label for="cMachId2">Machine ID</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="cDateIn" type="text" class="active validate">
+              <label for="cDateIn">Date</label>
+            </div>
+            <div class="input-field col s4">
+              <input id="cTimeIn" type="text" class="active validate">
+              <label for="cTimeIn">Time</label>
+            </div>
+            <div class="input-field col s3 offset-s1">
+              <button class="btn waves-effect waves-light red" type="submit" name="action2">Create<i class="material-icons right">send</i></button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <!-- UPDATE -->
       <div class="card-panel teal">
         <h5 style="color:white">Update</h5>
-        <button class="btn-large grey"><i class="material-icons left">update</i>Machine Status</button>
+        <button id="uMachStat" class="btn-large waves-effect waves-dark grey"><i class="material-icons left">update</i>Machine Status</button>
       </div>
+
+      <div id="uMachStatForm" class="card-panel white" hidden>
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="uMachId" type="text" class="active validate">
+              <label for="uMachId">Machine ID</label>
+            </div>
+            <div class="input-field col s4">
+              <input id="newMachStat" type="text" class="active validate">
+              <label for="newMachStat">New Machine Status</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s4">
+              <input id="curTime" type="text" class="active validate">
+              <label for="curTime">Current Time</label>
+            </div>
+            <div class="input-field col s4">
+              <input id="costs" type="text" class="active validate">
+              <label for="costs">Costs</label>
+            </div>
+            <div class="input-field col s3 offset-s1">
+              <button class="btn waves-effect waves-light red" type="submit" name="action2">Update<i class="material-icons right">send</i></button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <!-- Materialize Core Javascript -->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="js/materialize.min.js"></script>
+      <!-- JQuery Scripts -->
+      <script src="js/soprompt.js"></script>
    </body>
 </html>
